--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,33 +1,23 @@
-name: Deploy Hugo Site
-
+name: Push to GitHub Pages on push to main
 on:
   push:
     branches:
       - main
 
 jobs:
-  deploy:
+  build:
+    name: Deploy
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout main branch
-      uses: actions/checkout@v2
-      with:
-        ref: main
+      - name: Checkout code
+        uses: actions/checkout@v1
 
-    - name: Hugo Deploy GitHub Pages
-      uses: benmatselby/hugo-deploy-gh-pages@v2.1.0
-
-    - name: Build
-      run: hugo --minify
-
-    - name: Configure Git
-      run: |
-        git config --global user.name "Bimawa"
-        git config --global user.email "bimawa@gmail.com"
-
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+      - name: Deploy the site
+        uses: benmatselby/hugo-deploy-gh-pages@main
+        env:
+          HUGO_VERSION: 0.111.0
+          TARGET_REPO: git@github.com:bimawa/diamondrill.github.io.git
+          TARGET_BRANCH: main
+          # TOKEN: ${{ secrets.TOKEN }}
+          # HUGO_ARGS: '-t academic'
+          CNAME: diamandrill.ru
